# echonext-shd-detection

./: .dockerignore  .gcloudignore  .gitattributes  .gitignore  Dockerfile  Dockerfile.vertex  LICENSE  Makefile  README.md  cloudbuild.vertex.yaml  model_card.md  pyproject.toml  requirements-demo.txt  requirements.txt
.github/workflows/: ci.yml  deploy.yml
app/: serve.py  vertex.py
app/api/: main.py
app/demo/: app.py
huggingface_space/: README.md  app.py  requirements.txt
infra/: DEPLOY.md  ec2_bootstrap.sh
src/shd/: __init__.py  infer.py  model.py  registry.py  synthetic.py
tests/: test_api.py  test_infer.py  test_synthetic.py
